<resources>
    <string name="app_name">Robo-QXD</string>
    <string name="title_activity_joystick">joystick</string>
    <string name="Resetar">Resetar</string>
    <string name="A1">A1: </string>
    <string name="B1">B1: </string>
    <string name="C1">C1: </string>
    <string name="D1">D1: </string>
    <string name="A2">A2: </string>
    <string name="B2">B2: </string>
    <string name="C2">C2: </string>
    <string name="D2">D2: </string>
    <string name="play">PLAY </string>
    <string name="ConfServo">Configurar Servo</string>
    <string name="Conectar">Conectar</string>
    <string name="ConectarEasy">Conectar modo EASY</string>
    <string name="ConectarHard">Conectar modo HARD</string>
    <string name="title_activity_tela_de_programacao">TelaDeProgramacao</string>
    <string name="tVConfBraco">Configuração inicial do braço</string>

</resources>
